[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
database = {path = "../database"}
actix-web = "4"
actix-ws = "0.3"
dashmap = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
validator = { version = "0.20", features = ["derive"] }
argon2 = "0.5"
rand = "0.9"
rand_core = "0.9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs" ] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
secrecy = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
time = "0.3"
hex = "0.4"
redis = { version = "1" , features = ["tokio-comp" , "connection-manager"]}
num_cpus = "1"
futures-util = "0.3.31"
futures-core = "0.3.31"
bincode = "2"
tokio-util = {version = "0.7" , features = []}
