[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["postgres" , "runtime-tokio-rustls" , "uuid" , "macros", "chrono" , "migrate" , "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.20" #for lazy static initialization of global variables  

[dev-dependencies]
tokio = {version = "1" , features = ["rt-multi-thread" , "macros" , "time"]}
